--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
+    "@angular/animations": "^8.2.6",
+    "@angular/common": "8.2.6",
+    "@angular/compiler": "8.2.6",
+    "@angular/core": "8.2.6",
+    "@angular/forms": "8.2.6",
+    "@angular/platform-browser": "8.2.6",
+    "@angular/platform-browser-dynamic": "8.2.6",
+    "@angular/router": "8.2.6",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "^4.3.1",
-    "core-js": "2",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.14.7",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "core-js": "2.6.9",
+    "jquery": "3.4.1",
+    "ngx-bootstrap": "^5.1.2",
+    "popper.js": "1.15.0",
+    "rxjs": "6.5.3",
+    "zone.js": "0.9.1"
   },
   "scripts": {
     "ng": "ng",
